fixed scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -110,3 +110,13 @@ body{
 .ListAllProperties{
   margin-top: 50px;
 }
+
+::-webkit-scrollbar
+{
+    width: 0px;
+}
+::-webkit-scrollbar-track-piece
+{
+    background-color: transparent;
+    -webkit-border-radius: 6px;
+}
